<resources>
    <string name="app_name">SIGEC Admin</string>
    <string name="title_activity_main">SIGEC Admin</string>
    <string name="title_admin_dashboard">Portal do Administrador - SIGEC</string>
    <string name="title_estoque">Gestão de Estoque</string>
    <string name="title_instrutores">Instrutores Chef</string>
    <string name="title_turmas">Turmas &amp; Aulas</string>
    <string name="title_requisicoes">Requisições</string>
    <string name="title_historico">Histórico de Expedição</string>
</resources>
